# apple-gen-rs

./: .gitmodules  Cargo.toml  README.md
apple-auth-py/: Cargo.toml  README.md
apple-auth-py/src/: lib.rs
apple-auth-utils/: Cargo.toml  build.rs
apple-auth-utils/src/: lib.rs  requests.rs
apple_functions/src/: lib.rs
sample_data/: machine_info.json
