[package]
name = "apple-auth-utils"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "apple_auth_utils"

[build-dependencies]
cmake = "0.1"
cc = "1.0"

[dependencies]
libc = "0.2"
plist = "1.5"
ureq = "2.7"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
serde = { version = "1", features = ["derive"] }
serde_json  = "1"